--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@ h<!DOCTYPE html>
   <div class="links">
     <a class="card" href="https://www.linkedin.com/in/miguelangelgomeznuez/" target="_blank"><span>🔗</span>LinkedIn</a>
     <a class="card" href="https://drive.google.com/file/d/1Wo-xU_DVUaWS1mSDMt8H4bTL_XHokx8k/view" target="_blank"><span>💻</span>Carta de presentación</a>
-    <a class="card" href="/CV.pdf" target="_blank"><span>📄</span>Currículum</a>
+    <a class="card" href="https://docs.google.com/forms/d/1M32AO8VdZVzDtmR_0_dz5_uLBSwPiFyz1mPgSBvvW_w/viewform?edit_requested=true" target="_blank"><span>📄</span>Currículum</a>
     <a class="card" href="mailto:maik@maik.es"><span>📧</span>Contacto</a>
   </div>
 
 </body>
+
 </html>
