--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-h<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -163,3 +163,4 @@ h<!DOCTYPE html>
 </body>
 
 </html>
+
